--- a/skins/window.ui
+++ b/skins/window.ui
@@ -105,8 +105,8 @@
         <height>0</height>
        </size>
       </property>
-      <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="0">
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
         <widget class="QPushButton" name="reset">
          <property name="minimumSize">
           <size>
@@ -119,7 +119,7 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="0">
+       <item>
         <widget class="QPushButton" name="undo">
          <property name="minimumSize">
           <size>
@@ -129,6 +129,32 @@
          </property>
          <property name="text">
           <string>Undo</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="load">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>45</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Load</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="save">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>45</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Save</string>
          </property>
         </widget>
        </item>
