update for reverse

--- a/gomoku/gui/skins/window.ui
+++ b/gomoku/gui/skins/window.ui
@@ -126,6 +126,32 @@
         </widget>
        </item>
        <item>
+        <widget class="QPushButton" name="reverse">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>45</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Reverse</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="hint">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>45</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Hint</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="reset">
          <property name="minimumSize">
           <size>
